tests/rosetta/transpiler/Swift/100-doors-3.swift
// Generated by Mochi transpiler v0.10.37 on 2025-07-22 22:04:47 GMT+7
import Foundation

var result = ""
for i in 1..<101 {
    var j = 1
    while (((j as! Double) * (j as! Double)) < (i as! Double)) {
        j = ((j as! Double) + 1)
    }
    if (((j as! Double) * (j as! Double)) == (i as! Double)) {
        result = ((result as! String) + "O")
    } else {
        result = ((result as! String) + "-")
    }
}
print((result as! String))
